--- a/templates/add.html
+++ b/templates/add.html
@@ -18,7 +18,7 @@
   <label>Or Add New Category:</label>
   <input type="text" name="new_category" placeholder="New category"><br>
 
-  Amount(Iin BHD): <input type="text" name="amount" required><br>
+  Amount(In BHD): <input type="text" name="amount" required><br>
   <input type="submit" value="Add">
 </form>
 
