--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<HTML lang="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Expense Tracker Home</title>
@@ -12,5 +12,14 @@
       <li><a href="/view">View Expenses</a></li>
       <li><a href="/analyze">Analyze Expenses</a></li>
   </ul>
+  <nav>
+    {% if session.get('user_id') %}
+        <p>Welcome, {{ session['username'] }}!</p>
+        <a href="{{ url_for('logout') }}">Logout</a>
+    {% else %}
+        <a href="{{ url_for('login') }}">Login</a>
+        <a href="{{ url_for('signup') }}">Sign Up</a>
+    {% endif %}
+  </nav>
 </body>
-</HTML>
+</html>
