--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-</head>
-<body>
-  <h1>Login</h1>
-  <form method="POST" action="{{ url_for('login') }}">
+{% extends "base.html" %}
+
+{% block title %}Login - Expense Tracker{% endblock %}
+
+{% block content %}
+<h1>Login</h1>
+<form method="POST" action="{{ url_for('login') }}">
     <label for="username">Username:</label>
     <input type="text" name="username" required>
     <br>
@@ -14,7 +12,6 @@
     <input type="password" name="password" required>
     <br>
     <button type="submit">Login</button>
-  </form>
-  <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
-</body>
-</html>
+</form>
+<p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
+{% endblock %}
